test/fail_compilation/diag13109.d
/*
REQUIRED_ARGS: -lib -run fail_compilation/diag13109.d
TEST_OUTPUT:
---
Error: flags conflict with -run
---
*/

